--- a/app/package.json
+++ b/app/package.json
@@ -11,9 +11,10 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "bootstrap": "^5.1.0",
+    "bootstrap": "^4.6.0",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.0.0-beta.5",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^1.1.5",
@@ -42,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "webpack": "^3.8.1"
   }
 }
