--- a/app/package.json
+++ b/app/package.json
@@ -35,8 +35,8 @@
   },
   "browserslist": {
     "production": [
-      ">0.2%",
-      "not dead",
+      ">0.2%",      
+      "not ie <= 11",
       "not op_mini all"
     ],
     "development": [
