--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -34,11 +34,11 @@ http {
 
     # Terminate all incoming SSL and proxy it to the underlying applications
     server {
-        listen 443;
+        listen 80;
 
-        ssl on;
-        ssl_certificate /etc/ssl/ssl_cert.pem;
-        ssl_certificate_key /etc/ssl/ssl_cert.key;
+        ssl off;
+        #ssl_certificate /etc/ssl/ssl_cert.pem;
+        #ssl_certificate_key /etc/ssl/ssl_cert.key;
 
         # Disable the access log for SSL termination. It's useless clutter.
         access_log off;
