--- a/docker/nginx/sites/api.conf
+++ b/docker/nginx/sites/api.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name api.shadysmaoui.test;
+    #server_name api.potential;
 
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
