--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -5,7 +5,8 @@ RUN apt-get update && apt-get install -y \
         libjpeg62-turbo-dev \
         libpng-dev \
     && docker-php-ext-configure gd --with-freetype --with-jpeg \
-    && docker-php-ext-install -j$(nproc) gd
+    && docker-php-ext-install -j$(nproc) gd \
+    && docker-php-ext-install mysqli pdo pdo_mysql
 
 # Set working directory
 WORKDIR /var/www/api
@@ -31,4 +32,5 @@ USER www
 
 # Expose port 8000 and start php-fpm server
 EXPOSE 8000
-CMD ["php-fpm"]
+CMD php artisan serve --host=0.0.0.0 --port=8000
+#CMD ["php-fpm"]
