--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,52 +1,6 @@
 version: '3'
 services:
-  
-  webserver:
-    image: nginx:alpine
-    restart: unless-stopped
-    tty: true
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./api/:/var/www/api
-      - ./app:/var/www/app
-      - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./docker/nginx/sites/:/etc/nginx/conf.d/
-      - ./docker/nginx/ssl/:/etc/ssl/
-    networks:
-      - app-network
-
-  api:
-    build:
-      context: api
-      dockerfile: Dockerfile
-    image: digitalocean.com/php
-    restart: unless-stopped
-    tty: true
-    environment:
-      SERVICE_NAME: api
-      SERVICE_TAGS: dev
-      DB_DATABASE: ${DB_DATABASE}
-      DB_USERNAME: ${DB_USERNAME}
-      DB_PASSWORD: ${DB_PASSWORD}
-    working_dir: /var/www/api
-    volumes:
-      - ./api:/var/www/api
-      - ./docker/php/local.ini:/usr/local/etc/php/conf.d/local.ini
-    networks:
-      - app-network
-  
-      app:
-    build:
-      context: app
-      dockerfile: Dockerfile
-    restart: unless-stopped
-    tty: true            
-    networks:
-      - app-network
-  
-      db:
+  db:
     image: mysql:8.0
     restart: unless-stopped
     tty: true
@@ -55,18 +9,57 @@ services:
     environment:
       MYSQL_DATABASE: ${DB_DATABASE}
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
-      SERVICE_NAME: mysql
-      SERVICE_TAGS: dev
+      SERVICE_NAME: mysql      
     volumes:
-      - dbdata:/var/lib/mysql/
-      - ./docker/mysql/my.cnf:/var/lib/mysql/my.cnf
+      - dbdata:/var/lib/mysql/      
+    networks:
+      - app-network  
+  webserver:
+    image: nginx:alpine
+    restart: unless-stopped
+    tty: true
+    ports:
+      - "80:80"      
+    volumes:
+      - ./api/:/var/www/api
+      - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./docker/nginx/sites/:/etc/nginx/conf.d/
     networks:
       - app-network
-
+    depends_on:
+      - db
+  api:
+    build:
+      context: api
+      dockerfile: Dockerfile
+    image: digitalocean.com/php
+    restart: unless-stopped
+    tty: true
+    ports:
+      - "8000:8000"    
+    working_dir: /var/www/api
+    volumes:
+      - ./api:/var/www/api
+      - ./docker/php/local.ini:/usr/local/etc/php/conf.d/local.ini
+    networks:
+      - app-network
+    depends_on:
+      - db  
+  app:
+    build:
+      context: app
+      dockerfile: Dockerfile
+    restart: unless-stopped
+    tty: true
+    ports:
+      - "3000:3000"           
+    networks:
+      - app-network
+    depends_on:
+      - db    
 networks:
   app-network:
     driver: bridge
-
 volumes:
   dbdata:
     driver: local
