--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3'
 services:
-  db:
+  mysql:
     image: mysql:8.0
     restart: unless-stopped
     tty: true
@@ -13,21 +13,7 @@ services:
     volumes:
       - dbdata:/var/lib/mysql/      
     networks:
-      - app-network  
-  webserver:
-    image: nginx:alpine
-    restart: unless-stopped
-    tty: true
-    ports:
-      - "80:80"      
-    volumes:
-      - ./api/:/var/www/api
-      - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./docker/nginx/sites/:/etc/nginx/conf.d/
-    networks:
-      - app-network
-    depends_on:
-      - db
+      - app-network    
   api:
     build:
       context: api
@@ -36,7 +22,9 @@ services:
     restart: unless-stopped
     tty: true
     ports:
-      - "8000:8000"    
+      - "8000:8000"   
+    links:
+      - mysql 
     working_dir: /var/www/api
     volumes:
       - ./api:/var/www/api
@@ -44,19 +32,21 @@ services:
     networks:
       - app-network
     depends_on:
-      - db  
+      - mysql  
   app:
     build:
       context: app
       dockerfile: Dockerfile
     restart: unless-stopped
     tty: true
+    links:
+      - api
     ports:
       - "3000:3000"           
     networks:
       - app-network
     depends_on:
-      - db    
+      - api    
 networks:
   app-network:
     driver: bridge
